Fix Disqus spacing

--- a/_assets/stylesheets/_foundation.scss
+++ b/_assets/stylesheets/_foundation.scss
@@ -34,3 +34,11 @@ $saffron: #6f1402;
 $text-color: #454545;
 $blockquote-color: #c3c3c3;
 $footnotes-color: #777;
+
+/*---------------------------------------------------------------------------//
+//  $COMMENTS                                                                //
+//---------------------------------------------------------------------------*/
+
+.disqus-container {
+  margin-top: 3em;
+}
